fix endpoint params
