# src/main.go
@@ -14,20 +14,22 @@ func setupRouter(db_controller *sql.DB) *gin.Engine {
 	jwtManager := server.NewJWTManager()
 
 	r := gin.Default()
-	docs.SwaggerInfo.BasePath = "/api/v1"
+	docs.SwaggerInfo.BasePath = "/api"
 	v1 := r.Group("/api")
 	v1.Use(db.DatabaseMiddleware(db_controller))
 	
-	v1.POST("/users", server.CreateUser)
+	v1.POST("/users", func(c *gin.Context) {
+		server.CreateUser(jwtManager, c)
+	})
 	v1.POST("/login", func(c *gin.Context) {
 		server.Login(jwtManager, c)
 	})
-	v1.POST("/poll", func(c *gin.Context) {
+	v1.POST("/polls", func(c *gin.Context) {
 		server.CreatePoll(jwtManager, c)
 	})
-	v1.GET("/poll/:id", server.GetPoll)
+	v1.GET("/polls/:id", server.GetPoll)
 	v1.GET("/polls", server.GetPolls)
-	v1.POST("poll/:id/vote", func(c *gin.Context) {
+	v1.POST("polls/:id/vote", func(c *gin.Context) {
 		server.Vote(jwtManager, c)
 	})
 	v1.DELETE("/polls/:id", func(c *gin.Context) {
